# Marketing-Agents

./: .gitignore  README.md  SETUP_GUIDE.md  artisan  main.py  project comparison txt.txt  pyproject.toml
.claude/: settings.local.json
agents/: auto_engagement.py  caption_writer.py  content_recycler.py  content_strategist.py  growth_hacker.py  hashtag_researcher.py  job_manager.py  media_editor.py  music_researcher.py  package_brain.py  platform_agents.py  platform_router.py  publisher.py  schemas.py  vision_analyzer.py
api/: main.py
bot/: telegram_bot.py
config/: .env.example  settings.py
dashboard/: .env.example  package-lock.json  phpunit.xml
dashboard/app/Models/: AiModelConfig.php  AiUsageLog.php  AnalyticMetric.php  AuditLog.php  BillingRecord.php  BotPersonality.php  BotTrainingPair.php  Business.php  ContentCalendar.php  ContentStrategy.php  EngagementEvent.php  HashtagCache.php  JobCandidate.php  JobListing.php  KnowledgeSource.php  MediaItem.php  MusicTrack.php  PlatformAgent.php  Post.php  User.php  (+5 more)
dashboard/bootstrap/: app.php
dashboard/config/: services.php
dashboard/routes/: api.php  web.php
memory/: content_memory.py  credentials.py  database.py  models.py
migrations/: seed_plans.py  v2_enhance.py  v3_multi_business.py
orchestrator/: workflow.py
security/: __init__.py  api_auth.py  audit_log.py  content_scanner.py  encryption.py  file_guard.py  pii_redactor.py  prompt_guard.py  publish_gate.py  text_scanner.py
services/: __init__.py  ai_usage.py  event_bus.py  insights_generator.py  scheduler.py
tests/: test_api.py  test_dashboard.py  test_full.py  test_new_features.py
tools/: _tiktok_sandbox_auth.py  google_auth_setup.py  linkedin_auth_setup.py  media_utils.py  meta_auth_setup.py  speech_to_text.py  tiktok_auth_setup.py  twitter_auth_setup.py  voiceover.py
(+89 files in other folders)
